docs/style/main.css
html, body {
    height: 100%;
    margin: 0;
}

.dang-container {
  height: 100vh;
  background: url("../images//dang_supper.png") no-repeat center;
}

.dang-text-1 {
  font-size: 5em;
  font-weight: bold;
  color: #8e44ad;
  transform: translateX(75%);
  animation: dang-scroll 2s linear infinite;
}

.dang-text-2 {
  font-size: 5em;
  font-weight: bold;
  color: #3498db;
  transform: translateX(100%);
  animation: dang-scroll 0.7s linear infinite;
}

.dang-text-3 {
  font-size: 5em;
  font-weight: bold;
  color: #2ecc71;
  transform: translateX(50%);
  animation: dang-scroll 1s linear infinite;
}

@keyframes dang-scroll {
 0%   {
   transform: translateX(100%);
 }
 100% {
   transform: translateX(-100%);
 }
}

